--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -146,13 +146,19 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
                         <span class="sub-item">Usuarios</span>
                       </a>
                     </li>
-                     <!-- llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll -->
+                     
                     <li>
                       <a th:href="@{/login}">
-                        <span class="sub-item">Volever al login</span>
+                        <span class="sub-item">Volver al login</span>
                       </a>
                     </li>
-                    <!-- llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll -->
+                    <li>
+                      <a th:href="@{/inventarios}">
+                        <span class="sub-item"> Inventario</span>
+                      </a>
+                    </li>
+                    
+                    
                   </ul>
                 </div>
               </li>
